tests/extensions/concurrency/valid/semaUp.wacc
begin
    sema s = sema(3);
    sema_up s
end