tests/extensions/concurrency/semanticErr/semaUpWrongType.wacc
begin
    lock l;
    sema_up l
end